Add category annotations to apps and resources.

--- a/data/applications/rhosak.yaml
+++ b/data/applications/rhosak.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: rhosak
+  annotations:
+    opendatahub.io/categories: 'Data management'
 spec:
   displayName: OpenShift Streams for Apache Kafka
   provider: Red Hat
