--- a/data/docs/watson-studio-setup-openscale-how-to.yaml
+++ b/data/docs/watson-studio-setup-openscale-how-to.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: watson-studio-setup-openscale-how-to
   type: how-to
+  annotations:
+    opendatahub.io/categories: 'Data management,Deployment,Model serving,Monitoring'
 spec:
   appName: watson-studio
   displayName: How to set up Watson OpenScale
