--- a/data/applications/pachyderm.yaml
+++ b/data/applications/pachyderm.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: pachyderm
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Data management,Jupyter notebook,Python'
 spec:
   displayName: Pachyderm
   provider: Pachyderm
