--- a/data/applications/percepti-labs.yaml
+++ b/data/applications/percepti-labs.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: perceptiLabs
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Deployment,Python'
 spec:
   displayName: PerceptiLabs
   provider: PercetiLabs
