--- a/data/docs/anaconda-tutorial.yaml
+++ b/data/docs/anaconda-tutorial.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: anaconda-background
   type: tutorial
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Getting started,Python,SciKit-Learn'
 spec:
   appName: anaconda-ce
   displayName: What is Anaconda?
