--- a/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
+++ b/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: jupyter-notebooks-in-watson-studio-tutorial
   type: tutorial
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
 spec:
   appName: watson-studio
   displayName: Using Jupyter notebooks in Watson Studio
