--- a/data/docs/python-effective-pandas-tutorial.yaml
+++ b/data/docs/python-effective-pandas-tutorial.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: python-effective-pandas-tutorial
   type: tutorial
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Data management,Jupyter notebook,Python'
 spec:
   appName: anaconda-ce
   displayName: Data analysis in Python with Pandas
