--- a/data/docs/python-gpu-numba-tutorial.yaml
+++ b/data/docs/python-gpu-numba-tutorial.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: python-gpu-numba-tutorial
   type: tutorial
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
 spec:
   appName: anaconda-ce
   displayName: GPU Computing in Python with Numba
