--- a/data/docs/python-scalable-computing-dask-tutorial.yaml
+++ b/data/docs/python-scalable-computing-dask-tutorial.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: python-scalable-computing-dask-tutorial
   type: tutorial
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
 spec:
   appName: anaconda-ce
   displayName: Scalable computing in Python with Dask
