--- a/data/docs/python-scikit-learn-tutorial.yaml
+++ b/data/docs/python-scikit-learn-tutorial.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: python-scikit-learn-tutorial
   type: tutorial
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python,SciKit-Learn'
 spec:
   appName: anaconda-ce
   displayName: Machine Learning in Python with Scikit-Learn
