--- a/data/docs/python-visualization-tutorial.yaml
+++ b/data/docs/python-visualization-tutorial.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: python-visualization-tutorial
   type: tutorial
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Data visualization,Jupyter notebook,Python'
 spec:
   appName: anaconda-ce
   displayName: Python tools for data visualization
