--- a/data/docs/watson-studio-clean-shape-visualize-how-to.yaml
+++ b/data/docs/watson-studio-clean-shape-visualize-how-to.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: watson-studio-clean-shape-visualize-how-to
   type: how-to
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Data management,Data visualization'
 spec:
   appName: watson-studio
   displayName: How to clean, shape, and visualize my data
