--- a/data/docs/watson-studio-create-notebook-how-to.yaml
+++ b/data/docs/watson-studio-create-notebook-how-to.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: watson-studio-create-notebook-how-to
   type: how-to
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook'
 spec:
   appName: watson-studio
   displayName: How to create a notebook in Watson Studio
