--- a/data/docs/watson-studio-integrate-with-git-how-to.yaml
+++ b/data/docs/watson-studio-integrate-with-git-how-to.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: watson-studio-integrate-with-git-how-to
   type: how-to
+  annotations:
+    opendatahub.io/categories: 'Getting started'
 spec:
   appName: watson-studio
   displayName: How to create a project that integrates with Git
