--- a/data/docs/watson-studio-runtime-env-how-to.yaml
+++ b/data/docs/watson-studio-runtime-env-how-to.yaml
@@ -1,6 +1,8 @@
 metadata:
   name: watson-studio-runtime-env-how-to
   type: how-to
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook,Python'
 spec:
   appName: watson-studio
   displayName: How to choose between notebook runtime environment options
