--- a/data/quickstarts/deploy-watson-model-quickstart.yaml
+++ b/data/quickstarts/deploy-watson-model-quickstart.yaml
@@ -1,6 +1,8 @@
 kind: ConsoleQuickStart
 metadata:
   name: build-deploy-watson-model
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Deployment,Jupyter notebook,Model serving,Python'
 spec:
   displayName: Deploying a model with Watson Studio
   appName: watson-studio
