--- a/data/quickstarts/seldon-deploy-canary-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-canary-quickstart.yaml
@@ -1,6 +1,8 @@
 kind: ConsoleQuickStart
 metadata:
   name: seldon-deploy-model-canary
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Deployment,Model serving,SciKit-Learn'
 spec:
   displayName: Launch a SKLearn model and update model by canarying
   appName: seldon-deploy
