--- a/data/applications/openvino.yaml
+++ b/data/applications/openvino.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: openvino
+  annotations:
+    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,TensorFlow,Python,PyTorch'
 spec:
   displayName: OpenVINO
   provider: Intel
@@ -9,7 +11,7 @@ spec:
   img: images/openvino.svg
   category: Self managed
   support: third party support
+  csvName: openvino-operator
   docsLink: https://docs.openvinotoolkit.org/latest/index.html
   quickStart: openvino-inference-notebook
   getStartedLink: https://github.com/openvinotoolkit/openvino_notebooks
-  featureFlag: openvino
