--- a/data/applications/rhosak.yaml
+++ b/data/applications/rhosak.yaml
@@ -8,7 +8,7 @@ spec:
   description: |-
     A managed cloud service for  streaming data that reduces the operational cost and complexity of delivering real-time applications across hybrid-cloud environments.
   kfdefApplications: []
-  route: ''
+  endpoint: https://cloud.redhat.com/application-services/streams/kafkas
   img: images/red-hat.svg
   category: Red Hat managed
   support: red hat
