--- a/data/quickstarts/seldon-deploy-explainer-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-explainer-quickstart.yaml
@@ -13,7 +13,7 @@ spec:
     ### This quick start shows you how to launch an income classifier model and see explanations.
     Seldon Deploy is a specialist set of tools designed to simplify and accelerate the process of deploying and managing your machine learning models.
 
-    This quick start is a short version of the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/docs/demos/seldon-core/explainer-anchortabular/) tutorial.
+    This quick start is a short version of the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/en/v1.2/contents/demos/seldon-core/explainer-anchor-tabular/index.html) tutorial.
   tasks:
     - title: Deploy a pretrained income classifier model
       description: |-
@@ -24,7 +24,7 @@ spec:
         4. Click through the wizard to deploy the model.
       summary:
         success: You have deployed a pretrained SKLearn iris model
-        failed: Try the steps again or see the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/docs/demos/seldon-core/explainer-anchortabular/) tutorial.
+        failed: Try the steps again or see the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/en/v1.2/contents/demos/seldon-core/explainer-anchor-tabular/index.html) tutorial.
     - title: Add an explainer
       description: |-
         ### Deploy a pretrained explainer model for the income classifier
@@ -33,7 +33,7 @@ spec:
         3. Click through wizard to deploy the explainer.
       summary:
         success: The explainer shows as loaded
-        failed: Try the steps again or see the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/docs/demos/seldon-core/explainer-anchortabular/) tutorial.
+        failed: Try the steps again or see the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/en/v1.2/contents/demos/seldon-core/explainer-anchor-tabular/index.html) tutorial.
     - title: Make a prediction and see explanations
       description: |-
         ### Make a prediction:
@@ -45,6 +45,6 @@ spec:
         3. Click **Explain** under the prediction to understand the most influential features in calculating this result.
       summary:
         success: You see anchor-style explanations for the income classifier model.
-        failed: Try the steps again or see the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/docs/demos/seldon-core/explainer-anchortabular/) tutorial.
+        failed: Try the steps again or see the Seldon [Model Explanations with Anchor Tabular](https://deploy.seldon.io/en/v1.2/contents/demos/seldon-core/explainer-anchor-tabular/index.html) tutorial.
   conclusion: You are now able to understand the predictions of the model.
   nextQuickStart: []
