Fix for punctuation on Seldon drift quick start description

--- a/data/quickstarts/seldon-deploy-drift-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-drift-quickstart.yaml
@@ -8,7 +8,7 @@ spec:
   appName: seldon-deploy
   durationMinutes: 10
   icon: 'images/seldon.svg'
-  description: Monitor drift for a deployed image classifier model
+  description: Monitor drift for a deployed image classifier model.
   introduction: |-
     ### This quick start shows you how to launch a TensorFlow image classifier model and detect when requests to the model are drifting.
     Seldon Deploy is a specialist set of tools designed to simplify and accelerate the process of deploying and managing your machine learning models.
