--- a/data/docs/python-gpu-numba-tutorial.yaml
+++ b/data/docs/python-gpu-numba-tutorial.yaml
@@ -10,3 +10,4 @@ spec:
     Learn how to create GPU accelerated functions using Numba.
   url: https://github.com/ContinuumIO/gtc2018-numba
   durationMinutes: 90
+  featureFlag: gpu-computing
