Update AI Kit app def to not be feature flagged out

--- a/data/applications/aikit.yaml
+++ b/data/applications/aikit.yaml
@@ -7,12 +7,11 @@ spec:
   provider: Intel®
   description: |-
     A comprehensive set of interoperable AI software tools, built using oneAPI, to provide drop-in acceleration for end to end data science and machine learning pipelines on Intel architectures with familiar Python libraries and frameworks.
-  kfdefApplications: ['jupyterhub', 'notebook-images']
   route: jupyterhub
   img: images/oneapi.png
-  category: Intel® managed
-  support: Intel®
+  category: Self managed
+  support: third party support
+  csvName: aikit-operator
   docsLink: https://software.intel.com/content/www/us/en/develop/tools/oneapi/ai-analytics-toolkit.html
   quickStart: create-aikit-notebook
   getStartedLink: https://software.intel.com/content/www/us/en/develop/documentation/get-started-with-ai-linux/top.html
-  featureFlag: aikit
